--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
       
       - name: Run TestNG using maven
         run: |
+              mvn clean install
               cd Automatic_Testing
               mvn clean test -Dsurefire.suiteXmlFiles=TestNG.xml
 
