--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,10 @@ name: CI for TestNG
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -32,7 +36,7 @@ jobs:
         run: |
               cd ./Automatic_Testing/
               pwd
-              mvn clean test -Dsurefire.suiteXmlFiles=TestNG.xml
+              mvn clean test -"Dsurefire.suiteXmlFiles"=TestNG.xml
 
       - name: Upload Reports
         uses: actions/upload-artifact@v4
