--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
               cd ./Automatic_Testing/
               pwd
-              mvn clean test -"Dsurefire.suiteXmlFiles"=TestNG.xml
+              mvn clean test
 
       - name: Upload Reports
         uses: actions/upload-artifact@v4
