--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,7 @@ jobs:
         run: |
               cd ./Automatic_Testing/
               pwd
-              ls
-              mvn clean test -DsuiteXmlFile=/home/runner/work/Ecommerce_Testing/Automatic_Testing/TestNg.xml
+              mvn clean test -DsuiteXmlFile=./TestNg.xml
 
       - name: Upload Reports
         uses: actions/upload-artifact@v4
