--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
               cd ./Automatic_Testing/
               pwd
-              mvn clean test -DsuiteXmlFile=./TestNg.xml
+              mvn -B package --file pom.xml
 
       - name: Upload Reports
         uses: actions/upload-artifact@v4
